Avatar not ready

--- a/src/app/home/home.page.css
+++ b/src/app/home/home.page.css
@@ -1,10 +1,10 @@
 ion-content {
   --background: var(--primary-bg);
   position: relative;
+  z-index: 1;
 }
 ion-content:hover::before {
   --size: 75rem;
-  z-index: 1;
   pointer-events: none;
 }
 ion-content::before {
@@ -18,6 +18,8 @@ ion-content::before {
   background: radial-gradient(circle closest-side, rgba(29, 78, 216, 0.15), transparent 80%);
   transform: translate(-50%, -50%);
   transition: width 0.2s ease, height 0.2s ease;
+  z-index: 1;
+  pointer-events: none;
 }
 ion-content main {
   display: flex;
@@ -28,6 +30,8 @@ ion-content main {
   scroll-behavior: smooth;
   scroll-snap-type: y proximity;
   position: relative;
+  z-index: 2;
+  pointer-events: all;
 }
 ion-content main div,
 ion-content main section {
@@ -38,6 +42,11 @@ ion-content main nav {
   position: fixed;
   top: 3rem;
   left: 3rem;
+  z-index: 2;
+}
+ion-content main nav .menu__span {
+  font-weight: bold;
+  cursor: pointer;
 }
 ion-content main section {
   width: 100%;
@@ -89,6 +98,9 @@ ion-content main section .item__button .fill {
   border-radius: 0.4rem;
   color: var(--primary-bg);
 }
+ion-content main section#hero {
+  position: relative;
+}
 ion-content main section#hero .item {
   flex-direction: column;
 }
@@ -97,6 +109,11 @@ ion-content main section#hero .item__header {
 }
 ion-content main section#hero .item__subheader {
   font-size: 1.5rem;
+}
+ion-content main section#hero .avatar {
+  position: absolute;
+  top: 1rem;
+  right: 3rem;
 }
 ion-content main section#work {
   min-height: 60vh;
