--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -21,6 +21,9 @@
           </span>
         </div>
       </div>
+      <div class="avatar">
+        <app-avatar></app-avatar>
+      </div>
     </section>
 
     <section id="work">
@@ -47,8 +50,6 @@
       </div>
     </section>
 
-    <section>
-      <app-avatar></app-avatar>
-    </section>
+    <section></section>
   </main>
 </ion-content>
