--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,10 +1,11 @@
 ion-content {
   --background: var(--primary-bg);
   position: relative;
+  z-index: 1;
+
   &:hover {
     &::before {
       --size: 75rem;
-      z-index: 1;
       pointer-events: none;
     }
   }
@@ -24,6 +25,8 @@ ion-content {
     // background: radial-gradient(600px at 1577px 1694px, rgba(29, 78, 216, 0.15), transparent 80%);
     transform: translate(-50%, -50%);
     transition: width 0.2s ease, height 0.2s ease;
+    z-index: 1;
+    pointer-events: none;
   }
 
   main {
@@ -35,6 +38,8 @@ ion-content {
     scroll-behavior: smooth;
     scroll-snap-type: y proximity;
     position: relative;
+    z-index: 2;
+    pointer-events: all;
 
     & div,
     section {
@@ -46,12 +51,15 @@ ion-content {
       position: fixed;
       top: 3rem;
       left: 3rem;
+      z-index: 2;
 
       .menu {
         &__icon {
         }
 
         &__span {
+          font-weight: bold;
+          cursor: pointer;
         }
       }
     }
@@ -69,6 +77,8 @@ ion-content {
         width: 60%;
         align-items: flex-start;
         gap: 2rem;
+        // z-index: 3;
+        // pointer-events: none;
 
         &__header {
           font-size: 3.75rem;
@@ -116,6 +126,8 @@ ion-content {
       }
 
       &#hero {
+        position: relative;
+
         .item {
           flex-direction: column;
 
@@ -126,6 +138,14 @@ ion-content {
           &__subheader {
             font-size: 1.5rem;
           }
+        }
+
+        .avatar {
+          position: absolute;
+          // width: 100%;
+          // height: 100%;
+          top: 1rem;
+          right: 3rem;
         }
       }
 
