--- a/src/global.css
+++ b/src/global.css
@@ -21,6 +21,7 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+@import url("https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&display=swap");
 /**
  * Ionic Dark Mode
  * -----------------------------------------------------
