--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,9 +1,36 @@
 <ion-content #mainElement [fullscreen]="true">
+  <div class="meteors">
+    <div class="meteor"></div>
+    <div class="meteor"></div>
+    <div class="meteor"></div>
+    <div class="meteor"></div>
+    <div class="meteor"></div>
+    <div class="meteor"></div>
+    <div class="meteor"></div>
+    <div class="meteor"></div>
+    <div class="meteor"></div>
+    <div class="meteor"></div>
+    <div class="meteor"></div>
+    <div class="meteor"></div>
+  </div>
   <main>
     <nav>
       <div class="menu">
         <div class="menu__icon"></div>
         <span class="menu__span" data-color="primary-color">MENU</span>
+      </div>
+      <div class="menu__sidebar">
+        <!-- <button type="button" class="meteor__toggle">
+          <i class="fa-solid fa-meteor"></i>
+        </button> -->
+        <button
+          type="button"
+          class="meteor__toggle"
+          (click)="toggleClass($event)"
+          [ngClass]="{'active': isActive}"
+        >
+          <i class="fa-solid fa-meteor"></i>
+        </button>
       </div>
     </nav>
     <section id="hero">
@@ -11,25 +38,34 @@
         <div class="item__header">
           <span>
             Hi, my <br />
-            name is <strong>Jimz</strong>.
+            name is<strong class="text-highlight hover"> Jimz</strong>.
           </span>
         </div>
         <div class="item__subheader">
           <span>
-            I'm a <strong>junior software developer</strong> from <br />
-            Makati, Philippines.
+            I'm a
+            <strong class="textflip-animate">
+              <span data-flip="frontend developer">
+                junior software developer</span
+              > </strong
+            ><br />
+            from Makati, Philippines.
           </span>
         </div>
       </div>
       <div class="avatar">
-        <app-avatar></app-avatar>
+        <!-- <app-avatar></app-avatar> -->
       </div>
     </section>
 
     <section id="work">
       <div class="item" data-color="primary-color">
         <div class="item__header">
-          <span><strong> Let's work together. </strong></span>
+          <span
+            ><strong class="text-highlight hover">
+              Let's work together.
+            </strong></span
+          >
         </div>
         <div class="item__subheader">
           <span>
@@ -50,6 +86,21 @@
       </div>
     </section>
 
-    <section></section>
+    <section id="experience"></section>
   </main>
 </ion-content>
+
+<!-- 
+animation: {
+        meteor: "meteor 5s linear infinite",
+      },
+keyframes: {
+  meteor: {
+    "0%": { transform: "rotate(215deg) translateX(0)", opacity: 1 },
+    "70%": { opacity: 1 },
+    "100%": {
+      transform: "rotate(215deg) translateX(-500px)",
+      opacity: 0,
+    },
+  },
+}, -->
