--- a/src/global.scss
+++ b/src/global.scss
@@ -44,3 +44,155 @@
   //   box-sizing: border-box;
   font-family: "Bitter", serif;
 }
+
+.text-highlight {
+  cursor: default;
+  &.hover {
+    &:hover {
+      background-size: auto auto;
+      background-clip: border-box;
+      background-size: 200% auto;
+      color: var(--primary-color);
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: textclip 1s linear infinite;
+      background-image: var(--linear-gradient-animate);
+    }
+  }
+
+  &:not(.hover) {
+    background-size: auto auto;
+    background-clip: border-box;
+    background-size: 200% auto;
+    color: var(--primary-color);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textclip 1s linear infinite;
+    background-image: var(--linear-gradient-animate);
+  }
+}
+
+// Animations
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+
+// Vars
+$color_meteor: #fff;
+
+@function random-range($min, $max) {
+  @return random($max - $min) + $min;
+}
+
+.meteors {
+  z-index: -10;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  // position: relative;
+
+  // Loop to create multiple meteors with variations
+  @for $i from 1 through 12 {
+    .meteor:nth-child(#{$i}) {
+      width: 0;
+      height: 0;
+      border-top: 1px solid transparent;
+      border-bottom: 1px solid transparent;
+      border-right: #{random(120) +
+        80}px
+        solid
+        $color_meteor; // Random width between 40 and 90
+      border-image: linear-gradient(to left, $color_meteor, transparent) 1 100%;
+      border-radius: 0 2px 2px 0;
+      transform: rotate(30deg);
+      position: absolute;
+      top: #{random-range(0, 80)}#{"%"};
+      left: #{random-range(40, 100)}#{"%"};
+      opacity: 0;
+      animation: shooting #{random(8) + 6}s linear infinite;
+      animation-delay: #{random(12)}s; // Randomize delay between 0-3 seconds
+    }
+  }
+}
+
+@keyframes shooting {
+  0% {
+    transform: rotate(30deg) translate(-100%, -100%);
+    opacity: 0;
+  }
+
+  10% {
+    opacity: 1;
+  }
+
+  20%,
+  100% {
+    transform: rotate(30deg) translate(100%, 100%);
+    opacity: 0;
+  }
+}
+
+// .meteors {
+//   z-index: -10;
+//   width: 100%;
+//   height: 100%;
+
+//   .meteor {
+//     width: 0;
+//     height: 0;
+//     border-top: 1px solid transparent;
+//     border-bottom: 1px solid transparent;
+//     border-right: 90px solid $color_meteor;
+//     border-image: linear-gradient(to left, $color_meteor, transparent) 1 100%;
+//     border-radius: 0 2px 2px 0;
+//     transform: rotate(30deg);
+//     position: absolute;
+//     top: 23%;
+//     left: 70%;
+//     opacity: 0;
+//     animation: shooting 4s linear infinite;
+//     animation-delay: 1s;
+
+//     &:nth-child(2) {
+//       top: 13%;
+//       left: 64%;
+//       border-right-width: 80px;
+//       animation-delay: 2s;
+//     }
+
+//     &:nth-child(3) {
+//       top: 23%;
+//       left: 62%;
+//       border-right-width: 50px;
+//       animation-delay: 2.5s;
+//     }
+
+//     &:nth-child(4) {
+//       top: 64%;
+//       left: 72%;
+//       border-right-width: 50px;
+//       animation-delay: 1.3s;
+//     }
+//   }
+// }
+
+// @keyframes shooting {
+//   0% {
+//     transform: rotate(30deg) translate(-100%, -100%);
+//     opacity: 1;
+//   }
+
+//   20% {
+//     transform: rotate(30deg) translate(100%, 100%);
+//     opacity: 0;
+//   }
+//   100% {
+//     transform: rotate(30deg) translate(100%, 100%);
+//     opacity: 0;
+//   }
+// }
