--- a/src/global.css
+++ b/src/global.css
@@ -32,4 +32,261 @@
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 * {
   font-family: "Bitter", serif;
+}
+
+.text-highlight {
+  cursor: default;
+}
+.text-highlight.hover:hover {
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: var(--primary-color);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 1s linear infinite;
+  background-image: var(--linear-gradient-animate);
+}
+.text-highlight:not(.hover) {
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: var(--primary-color);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 1s linear infinite;
+  background-image: var(--linear-gradient-animate);
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+.meteors {
+  z-index: -10;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+}
+.meteors .meteor:nth-child(1) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 88px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 4%;
+  left: 42%;
+  opacity: 0;
+  animation: shooting 14s linear infinite;
+  animation-delay: 8s;
+}
+.meteors .meteor:nth-child(2) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 97px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 79%;
+  left: 45%;
+  opacity: 0;
+  animation: shooting 12s linear infinite;
+  animation-delay: 9s;
+}
+.meteors .meteor:nth-child(3) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 168px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 26%;
+  left: 69%;
+  opacity: 0;
+  animation: shooting 12s linear infinite;
+  animation-delay: 7s;
+}
+.meteors .meteor:nth-child(4) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 98px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 35%;
+  left: 44%;
+  opacity: 0;
+  animation: shooting 14s linear infinite;
+  animation-delay: 6s;
+}
+.meteors .meteor:nth-child(5) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 179px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 75%;
+  left: 59%;
+  opacity: 0;
+  animation: shooting 12s linear infinite;
+  animation-delay: 1s;
+}
+.meteors .meteor:nth-child(6) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 120px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 13%;
+  left: 57%;
+  opacity: 0;
+  animation: shooting 13s linear infinite;
+  animation-delay: 9s;
+}
+.meteors .meteor:nth-child(7) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 128px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 71%;
+  left: 59%;
+  opacity: 0;
+  animation: shooting 8s linear infinite;
+  animation-delay: 12s;
+}
+.meteors .meteor:nth-child(8) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 127px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 23%;
+  left: 98%;
+  opacity: 0;
+  animation: shooting 9s linear infinite;
+  animation-delay: 12s;
+}
+.meteors .meteor:nth-child(9) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 126px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 62%;
+  left: 65%;
+  opacity: 0;
+  animation: shooting 14s linear infinite;
+  animation-delay: 5s;
+}
+.meteors .meteor:nth-child(10) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 131px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 29%;
+  left: 54%;
+  opacity: 0;
+  animation: shooting 8s linear infinite;
+  animation-delay: 11s;
+}
+.meteors .meteor:nth-child(11) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 130px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 23%;
+  left: 56%;
+  opacity: 0;
+  animation: shooting 9s linear infinite;
+  animation-delay: 11s;
+}
+.meteors .meteor:nth-child(12) {
+  width: 0;
+  height: 0;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 182px solid #fff;
+  -o-border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+     border-image: linear-gradient(to left, #fff, transparent) 1 100%;
+  border-radius: 0 2px 2px 0;
+  transform: rotate(30deg);
+  position: absolute;
+  top: 50%;
+  left: 44%;
+  opacity: 0;
+  animation: shooting 9s linear infinite;
+  animation-delay: 12s;
+}
+
+@keyframes shooting {
+  0% {
+    transform: rotate(30deg) translate(-100%, -100%);
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  20%, 100% {
+    transform: rotate(30deg) translate(100%, 100%);
+    opacity: 0;
+  }
 }/*# sourceMappingURL=global.css.map */
